<resources>
    <string name="ebb_brand_name" translatable="false">Einstein Bros. Bagels</string>
    <string name="bru_brand_name" translatable="false">Bruegger\'s Bagels</string>
    <string name="nnyb_brand_name" translatable="false">Noah\'s New York Bagels</string>
    <string name="menu_rewards_second">My Rewards</string>
    <string name="menu_browse_the_menu_second">Menu</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_browse_our_locations_second">Locations</string>
    <string name="menu_purchase_an_egift_second">eGIFT</string>
    <string name="menu_check_out_your_inbox_2">@string/inbox</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_terms_privacy">Terms &amp; Privacy</string>
    <string name="dashboard_check_in_pay">Check IN / PAY</string>
    <string name="dashboard_default_welcome_message">HAPPY TO SEE YOU!</string>
    <string name="badge_max_count">%1$d+</string>
    <string name="badge_count">%1$d</string>
    <string name="make_someone_day">Make Someone\'s Day!</string>
    <string name="empty_transaction_history">We have no records of any transactions in the last 30 days. If you\'re trying to access a receipt that\'s more than 30 days old, please contact Bagel Brands Customer Service.</string>
    <string name="checkin_share_onboarding">Use the points you\'ve earned to share a Perk. Just click share, pick a Perk, send the provided link to your friend and give yourself a pat on the back for being awesome!</string>
    <string name="choose_one_to_add">Choose one to add to your order</string>
    <string name="check_my_points_buttons">Check my point &amp; eligible rewards</string>
    <string name="no_using_reward_today">I don\'t want to use a reward today</string>
    <string name="remove_reward_cd">Remove reward</string>
    <string name="remove_item_cd">Remove Item</string>
    <string name="dialog_remove_reward">Are you sure you want to remove this reward from your order?</string>
    <string name="discount_will_be_applied">Discount will be applied at the checkout</string>
    <string name="hey">Hey %s,</string>
    <string name="menu_signout">Sign Out</string>
    <string name="cal">%s Cal</string>
    <string name="calories">%s Calories</string>
    <string name="empty_menu">No data to show</string>
    <string name="our_menu">Our Menu</string>
    <string name="empty_cart">Your cart is empty!</string>
    <string name="delete_cart_item_title">Are you sure you want to delete this item?</string>
    <string name="add_bulk_item_dialog_message">This item needs additional time to be prepared, so ASAP pickup will not be available.</string>
    <string name="bulk_order_not_enough_time">This store is closing and order ahead for certain items in your cart is no longer available</string>
    <string name="curbside_pickup">Curbside Pick-up</string>
    <string name="remember_to_check_in_im_here">Remember to check in when you arrive by selecting \"I am here\"</string>
    <string name="nevermind">Nevermind</string>
    <string name="works_for_me">Works for me</string>
    <string name="delete_cart_item_message">If you delete this item, all customization will be lost</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_charges_asterisk">%1$s*</string>
    <string name="add_charges_asterisk_cd">%1$s Additional charges may apply.</string>
    <string name="add_more_items">+ Add more items</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_cd">Subtotal amount, %1$s</string>
    <string name="grand_total_cd">Grand Total, %1$s</string>
    <string name="new_balance_cd">Your new balance will be, %1$s</string>
    <string name="current_funds_cd">current funds, %1$s</string>
    <string name="current_funds_prefix_cd">Card balance Ending %1$s. </string>
    <string name="delivery_fee_cd">Delivery fee amount, %1$s</string>
    <string name="local_charge_cd">Local Charge (PIF) fee amount, %1$s</string>
    <string name="tax_cd">Tax amount, %1$s</string>
    <string name="total_cd">Total amount, %1$s</string>
    <string name="rewards_cd">Rewards card balance amount, %1$s</string>
    <string name="tax">Tax</string>
    <string name="local_tax">Local Charge (PIF)</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="continue_with_empty_cart_message">Your cart is empty, so we didn\'t submit anything.</string>
    <string name="reorder_not_all_items_available">One or more items are no longer available to order.</string>
    <string name="cancelling_order">Are you sure you want to cancel your order?</string>
    <string name="yes_cancel">Yes, cancel</string>
    <string name="keep_my_order">No, keep my order</string>
    <string name="add_items_to_cart">Add items to my cart</string>
    <string name="dont_want_to_order">I don\'t want to order</string>
    <string name="date_recent_order_format">MM/dd/YY</string>
    <string name="title_activity_locations">Locations</string>
    <string name="distance_in_miles">%1$.2f miles</string>
    <string name="distance_in_miles_away">%1$.2f miles away</string>
    <string name="get_directions">Get directions</string>
    <string name="view_location_details">Store Details</string>
    <string name="location_search_hint">Search by city, state, zipcode</string>
    <string name="action_list">List</string>
    <string name="action_list_cd">View List</string>
    <string name="all">All</string>
    <string name="start_new_order">Order now</string>
    <string name="start_new_order_with_break_line">Order \n now</string>
    <string name="continue_order">Continue my order now</string>
    <string name="location_not_recognized">Oh no! We don\'t recognize that location. Give it another shot with something slightly more specific. (i.e. add a zipcode, use city and state)</string>
    <string name="store_open_status_with_time">Open until %s</string>
    <string name="store_closed_status_with_time">Opens at %s</string>
    <string name="store_closed_status">Closed for the day</string>
    <string name="weekday_monday">Monday</string>
    <string name="weekday_tuesday">Tuesday</string>
    <string name="weekday_wednesday">Wednesday</string>
    <string name="weekday_thursday">Thursday</string>
    <string name="weekday_friday">Friday</string>
    <string name="weekday_saturday">Saturday</string>
    <string name="weekday_sunday">Sunday</string>
    <string name="store_closed">Closed</string>
    <string name="holidays">Holidays</string>
    <string name="holiday_hours_may_vary">Hours may vary</string>
    <string name="view_nutrition_n_allergens"><![CDATA[View Nutrition & Allergens]]></string>
    <string name="view_nutrition_n_allergens_cd">View Nutrition &amp; Allergens, Button</string>
    <string name="view_nutrition"><![CDATA[Nutrition]]></string>
    <string name="view_allergens"><![CDATA[Allergens]]></string>
    <string name="action_map">Map</string>
    <string name="action_map_cd">View Map</string>
    <string name="dialog_filter_locations_title">Filter Locations:</string>
    <string name="dialog_apply_filter">Apply</string>
    <string name="dialog_close">Close</string>
    <string name="lets_get_started">Let’s get started!</string>
    <string name="problems_getting_current_location">Problems getting current location.</string>
    <string name="reset_password_text">Apparently we need your email address to send you an email. Enter it below and we\'ll shoot you a link to change your password.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="forgot_password">Forgot password, let us help</string>
    <string name="round_up_tipping">Round up!</string>
    <string name="digit_custom_tipping">Custom tip</string>
    <string name="select_tip">Select Tip</string>
    <string name="or_sign_in_with">Or</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Email *</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="email_required">Email required</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your">Reset your</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="closest_store">%1$s is %2$.1f miles away</string>
    <string name="error_too_many_reset_password_attempts">Too many reset attempts. Please try again later</string>
    <string name="amenities">Amenities:</string>
    <string name="expires_in_format">Ends\n%s</string>
    <string name="expires_in_hours_format">%d Hours</string>
    <string name="ready_to_use_reward_cd">Ready to use reward</string>
    <string name="redeem_it_reward_cd">Redeem reward</string>
    <string name="today">Today</string>
    <string name="email_sent">We sent a fancy password reset link to %s</string>
    <string name="error_sending_email">We had problems sending you an email!</string>
    <string name="title_activity_terms_and_privacy">Terms &amp; Privacy</string>
    <string name="title_activity_faq_title"><![CDATA[FAQs & Help]]></string>
    <string name="add_funds">Add funds</string>
    <string name="add_payment">Add payment</string>
    <string name="size_extra_large">XL</string>
    <string name="size_large">L</string>
    <string name="size_medium">M</string>
    <string name="size_small">S</string>
    <string name="error_no_car_maker_selected">Select a Vehicle Make.</string>
    <string name="error_no_car_color_selected">Select a Vehicle Color.</string>
    <string name="error_no_car_type_selected">Select a Vehicle Type.</string>
    <string name="continue_text">Continue</string>
    <string name="are_you_enjoying">Are you enjoying</string>
    <string name="this_app_question_mark">This app?</string>
    <string name="rate_us_text_feedback">Rate us, give us feedback, let us know how\nwe can improve!</string>
    <string name="im_not_ready">I\'m not ready</string>
    <string name="im_not_ready_cd">I\'m not ready, Button</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="dont_ask_me_again_cd">Don\'t ask me again, Button</string>
    <string name="ive_got_some_ideas_for_you">I\'ve got some ideas for you</string>
    <string name="im_your_biggest_fan">I\'m your biggest fan</string>
    <string name="give_us">Give us</string>
    <string name="feedback">Feedback</string>
    <string name="star_1">1 Star</string>
    <string name="star_2">2 Stars</string>
    <string name="star_3">3 Stars</string>
    <string name="star_4">4 Stars</string>
    <string name="star_5">5 Stars</string>
    <string name="feedback_subtitle_text">We would like to know what you love\nand even what you don\'t love</string>
    <string name="error_feedback_empty">You must provide some feedback text!</string>
    <string name="error_no_stars_selected">You have to rate our app using the stars!</string>
    <string name="select_car_make_title">Select Vehicle Make</string>
    <string name="curbside_car_maker_selection_tittle">Vehicle Make</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_message">Earn points for every purchase,\nget exclusive offers,\ntrack purchases and more!</string>
    <string name="sign_up_with_email_and_password">Sign up with email &amp; password</string>
    <string name="sign_up_or">Or</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="im_already_a_member">I\'m already a member!</string>
    <string name="size_small_content_description">Size Small</string>
    <string name="size_medium_content_description">Size Medium</string>
    <string name="size_large_content_description">Size Large</string>
</resources>